scribble-test/src/test/resources/good/misc/globals/grecursion/Recursion03.scr
module good.misc.globals.grecursion.Recursion03;


global protocol Recursion3(role A, role B)
{
	rec X
	{
		l1() from A to B;
		rec Y
		{
			l2() from B to A;
			continue Y;
			//continue X;  // Uncomment OK if above line is commented
		}
		//l3() from B to A;  // Uncommemt bad
	}
	//l4() from B to A;  // Uncomment bad
}

