scribble-test/src/test/resources/bad/reach/globals/grecursion/Recursion01b.scr
module bad.reach.globals.grecursion.Recursion01b;


global protocol Recursion1b(role A, role B)
{
	//rec A { }  // Currently OK (role/recvar name clash). Disallow?

	rec X
	{
		l1() from A to B;
		continue X;
		//continue Y;  // Uncomment bad, even if above line is commented
		l2() from A to B;  // Uncomment bad
	}
}

